fix sidebar spacing on narrow screens

--- a/assets/sass/_content.scss
+++ b/assets/sass/_content.scss
@@ -10,7 +10,7 @@
 }
 
 .content__secondary {
-  margin-top: 1em;
+  margin-top: 2em;
 
   @media (min-width: $medium-screen) {
     position: relative;
